<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.ikozmin</groupId>
    <artifactId>rfm-automation-parent</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>

    <modules>
        <module>common</module>
        <module>rfm-downloader</module>
        <module>zenith-processor</module>
        <module>distribution</module>
    </modules>

    <properties>
        <revision>2.2.2</revision>
        <maven.compiler.release>21</maven.compiler.release>
        <maven-jar-plugin.version>3.4.2</maven-jar-plugin.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <jackson.version>2.17.2</jackson.version>
        <slf4j.version>2.0.13</slf4j.version>
        <logback.version>1.5.6</logback.version>
        <picocli.version>4.7.6</picocli.version>
        <junit.version>5.10.3</junit.version>
        <assertj.version>3.26.3</assertj.version>
        <mockito.version>5.12.0</mockito.version>
    </properties>
</project>
